bug fix for article title and text alignment issue

--- a/ubyssey/static_src/src/styles/modules/guide/2022/_objects.scss
+++ b/ubyssey/static_src/src/styles/modules/guide/2022/_objects.scss
@@ -20,9 +20,9 @@
 
 .o-container {
   width: 100%;
-  max-width: 1000px;
+  max-width: 600px;
   display: grid;
-  justify-items: center;
+  justify-items: left;
   margin: auto;
   padding-bottom: 5%;
   @media($bp-larger-than-tablet) {
